# StackStream

./: CMakeLists.txt  DraggableImage.qml  Image.cpp  Image.h  Layer.cpp  Layer.h  Layer.qml  MainForm.ui.qml  README.md  SLayer.qml  StackStream.pro  StackStream.vpj  TestDelegate.qml  common.h  image.cpp  image.h  layer.cpp  layer.h  main.cpp  main.py  main.qml  qml.qrc  testdevcppwidget.h  testmodel.cpp  testmodel.h  todo_mindmap.vym
cmake_modules/: FindFreeImage.cmake  FindFreeImagePlus.cmake  FindPyQt5.cmake
devtest/PyQmlProof/: ImagePane.qml  PointTablePane.qml  PyQmlProof.pro  PyQmlProof.py  PyQmlProof.qml  Spline.qml  SplinePoint.qml  TiledBackground.qml  list_role_model.py
source/: CMakeLists.txt  DraggableLayer.qml  Float32SGTexture.cpp  Float32SGTexture.h  GilLocker.cpp  GilLocker.h  Image.cpp  Image.h  Layer.cpp  Layer.h  LayerRenderer.cpp  LayerRenderer.frag  LayerRenderer.h  Redis.cpp  Redis.h  RedisImageStorageTestItem.cpp  RedisImageStorageTestItem.h  RedisImageStorageTestItem.qml  RedisInst.cpp  RedisInst.h  SSGFramebufferObjectNode.cpp  SSGFramebufferObjectNode.h  SSGSimpleTextureNode.cpp  SSGSimpleTextureNode.h  SSGTexture.cpp  SSGTexture.h  SSGTextureMaterial.cpp  SSGTextureMaterial.h  SSGTextureProvider.cpp  SSGTextureProvider.h  SSImage.cpp  SSImage.h  SSImageItem.cpp  SSImageItem.h  SSLayer.cpp  SSLayer.h  SSLayerRenderer.cpp  SSLayerRenderer.frag  SSLayerRenderer.h  SSLayerStack.cpp  (+33 more)
source/Application/: Application.qml  Application.qrc  CMakeLists.txt  main.cpp
source/Float32SGContextPlugin/: Float32SGContext.cpp  Float32SGContext.h  Float32SGContextPlugin.cpp  Float32SGContextPlugin.h  Float32SGContextPlugin.json  Float32SGContextPlugin.pro  Float32SGLayer.cpp  Float32SGLayer.h  ThirtyBitSGContext.cpp  ThirtyBitSGContextPlugin.pro  ThirtyBitSGLayer.h
source/PythonModule/: CMakeLists.txt
source/QtQmlTricks/: CMakeLists.txt
source/QtQmlTricks/import/QtQmlTricks/: qmldir
source/QtQmlTricks/src/: qmlplugin.cpp  qmlplugin.h
source/SSGContextPlugin/: CMakeLists.txt  SSGContext.cpp  SSGContext.h  SSGContextPlugin.cpp  SSGContextPlugin.h  SSGContextPlugin.json  SSGContextPlugin.pro  SSGLayer.cpp  SSGLayer.h  SSGQuickLayer.cpp  SSGQuickLayer.h
source/ThirtyBitSGContextPlugin/: ThirtyBitSGContext.cpp  ThirtyBitSGContext.h  ThirtyBitSGContextPlugin.cpp  ThirtyBitSGContextPlugin.h  ThirtyBitSGContextPlugin.json  ThirtyBitSGContextPlugin.json.in  ThirtyBitSGContextPlugin.pro  ThirtyBitSGLayer.cpp  ThirtyBitSGLayer.h  thirtybitsgcontextplugin.pro  thirtybitsgcontextplugin_global.h  thirtybitsgcontextpluginconstants.h  thirtybitsgcontextpluginplugin.cpp  thirtybitsgcontextpluginplugin.h
